components/Menu.module.scss
.container {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  z-index: 10;
  margin-top: math.div($space, 4);
  pointer-events: none;

  .wrapper {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-left: $small-space;
    padding-right: $small-space;
  }

  .menu,
  .festivalMenu {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    //width: 100%;
    margin-bottom: math.div($space, 4);
    
    ul {
      display: flex;
      flex-direction: row;
      align-items: flex-start;
      justify-content: center;
      list-style: none;
      padding: 0;
      margin: 0;
      width: 100%;
      text-align: center;
      padding-left: 10%;
      padding-right: 10%;
      
      li {
        @include roundedElement();
        margin-right: math.div($space, 4);
        cursor: pointer;
        min-width: 180px;
        text-transform: uppercase;
        user-select: none;
        background-color: transparent;
        pointer-events: all;
        @include mq($until: desktop) {
          display: none ;  
        }
        &:hover {
          background-color: $white;
          font-feature-settings: "ss01" 1;
          font-variation-settings: "wght" 800;
        }

        &:last-child {
          margin-right: 0px;
        }

        &.selected {
          background-color: $black ;
          color: $white;
          -webkit-font-smoothing: antialiased;
        }
      }
    }
  }
  .festivalMenu {
    
    ul {
      li {
        text-transform: uppercase;
        background-color: white;
      }
    }
  }
}

.mobileMenu {
  position: relative;
  display: flex;
  flex-direction: column;
  transition: max-height 0.2s linear;
  padding:0px !important;
  @include mq($until: desktop) {
    display: flex !important;  
  }
  @include mq($from: desktop) {
    display: none !important;  
  }
  &.open {
    max-height: 1000px;
    background-color: #fff !important;
    padding: 0px !important;
    border-bottom-left-radius: 0px !important;
    border-bottom-right-radius: 0px !important;
  }
  .items {
    position: absolute;
    top:26px;
    padding-bottom: 5px;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 180px;
    border: 3px solid #000;
    margin:0px;
    background-color: #fff;
    border-top: 0px;
    border-bottom-left-radius: 20px !important;
    border-bottom-right-radius: 20px !important;
    &.open {
      display: flex;
      height: unset;
      overflow: unset;
    }
    .item {
      color: rgb(75, 75, 75);
      line-height: 1.3em;
      &.selected {
        color: #000;
      }
      &:hover {
        color: #000;
      }
    }
  }
  .arrow{
    position: absolute;
    top:6px;
    right:10px;
    &.open{
      transform: rotate(180deg);
    }
  }
}

.invert {
  li {
    border-color: white !important;
    color: white;
    -webkit-font-smoothing: antialiased;
    &.selected{
      color: black !important;
      background-color: white !important;
    }

    &:hover {
      color: $black;
      background: $white;
    }
  }
}

